--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,8 @@
-@import '../../node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+@import "../../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../../node_modules/bootstrap-select/dist/css/bootstrap-select.min.css";
 @import "../../node_modules/jquery-ui/dist/themes/smoothness/jquery-ui.min.css";
-@import "../../node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css";
+@import "../../node_modules/datatables.net-bs4/css/dataTables.bootstrap4.css";
 
 html {font-size: 15px}
 
