--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,7 +25,8 @@ img.footerimg{
   clear: both;
   background-color: #222222;
   width: 100%;
-  height: 100px;
+  min-height: 100px;
+  height: 100%;
   bottom: 0;
   left: 0;
   right: 0;
