--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,7 @@
 @import "../../node_modules/bootstrap-select/dist/css/bootstrap-select.min.css";
 @import "../../node_modules/jquery-ui/dist/themes/smoothness/jquery-ui.min.css";
 @import "../../node_modules/datatables.net-bs5/css/dataTables.bootstrap5.css";
+@import "./sidebar.css";
 @import "./style.css";
 
 html {
